# lithium

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  CRYPTO_AUDIT.md  Cargo.toml  HARDENING_CONTEXT.md  LICENSE  Lithium_README_EN.md  PRE_AUDIT_HARDENING.md  README.md  README_non_technical.md  SECURITY.md  SECURITY_AUDIT.md  braki.md  ctest-summary.py  deny.toml  docker-compose.yml  hardening.md  kyberbox_security_note.md  lithium.dockerfile  lithium_assumptions.md  lithium_core_audit.md  lithiumd_audit.md  lithiums_audit.md  plan.md  roadmap.md  tmp
.github/workflows/: audit.yml  reproducible-build.yml
app/: main.py
app/api/: messages.py  users.py
app/database/: models.py  rebuild.py  session.py
client/: client.py  requirements.txt
docker/: docker-compose.yml
docs/: crypto-protocol.md  daemon-runtime.md  data-lifecycle.md  deploy-instructions.md  design-decisions.md  development.md  glossary.md  index.md  ipc-reference.md  key-hierarchy.md  kyberbox.md  lithiumd.md  lithiumg.md  lithiums.md  reproducible-build.md  security-model.md  threat-model.md  versioning.md
docs/crates/: lithium_proto.md  lithiumd.md  lithiumg.md  lithiums.md
docs/operations/: daemon-runtime.md  deploy-instructions.md  development.md
docs/protocol/: crypto-protocol.md  ipc-reference.md  versioning.md
docs/reference/: lithium_core.md  lithiumd.md  lithiumg.md  lithiums.md
docs/security/: combiner.md  data-lifecycle.md  key-hierarchy.md  kyberbox.md  lithium_core-threat-model.md  reproducible-build.md  security-model.md  threat-model.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aead_decrypt.rs  e2e_session_seq.rs  identity_decode.rs  invite_decode.rs  keyfile_parse.rs  kyberbox_decrypt.rs  opaque_parse.rs  pow_verify.rs  secret_json.rs  sign_verify.rs  transport_decode.rs  transport_micro.rs  unpack_wire.rs
installer/: .gitignore
installer/linux/: install.sh
installer/windows/: lithium.iss
lithium_itest/: Cargo.toml
lithium_itest/src/: client.rs  helpers.rs  lib.rs
lithium_itest/tests/: server_tests.rs
lithium_itest/tests/daemon/: adversarial.rs  basic.rs  common.rs  concurrency.rs  contacts.rs  payload.rs  persistence.rs  server.rs  state_order.rs
lithium_itest/tests/daemon_server_tests/: account_lifecycle.rs  common.rs  concurrent.rs  invite_abuse.rs  messaging.rs
lithium_itest/tests/server/: auth_abuse.rs  concurrency.rs  mailbox_abuse.rs  replay_timestamp.rs  server_tests.rs
lithium_proto/: Cargo.toml
lithium_proto/src/: db.rs  headers.rs  labels.rs  lib.rs
lithium_proto/src/contract/: identity_file.rs  mod.rs  protocol.rs
lithiumd/: Cargo.toml  README.md
lithiumd/src/: fuzz_api.rs  identity.rs  labels.rs  lib.rs  main.rs  password_provider.rs  protocol_manager.rs  state.rs  state_fields.rs  traffic.rs  tray.rs  util.rs
lithiumd/src/commands/: contact_fetch.rs  contact_forget.rs  contact_list.rs  contact_mailbox.rs  contact_send.rs  contact_verify_emoji.rs  delete_account.rs  e2e.rs  invite_accept.rs  invite_accept_commitment.rs  invite_codec.rs  invite_create.rs  invite_finalize.rs  invite_reveal.rs  lock_keystore.rs  messages_list.rs  mod.rs  ping.rs  register.rs  remote_delete.rs  set_credentials.rs  set_server_identity.rs  set_server_url.rs  shutdown.rs  stored_message.rs  unlock_keystore.rs  unlock_storage.rs  wipe_local.rs
lithiumd/src/db/: mod.rs  models.rs  repo.rs
lithiumd/src/e2e/: crypto.rs  header.rs  mod.rs  prekeys.rs  seq_driver.rs  session.rs  state.rs  state_peer.rs  state_self.rs  wire.rs
lithiumd/src/ipc/: mod.rs  types.rs  unix.rs  windows.rs
lithiumg/: Cargo.toml  README.md
lithiumg/src/: app.rs  errors.rs  ipc.rs  main.rs
lithiumg/src/app/: chat.rs  events.rs  mod.rs  modals.rs  screens.rs  topbar.rs
lithiums/: Cargo.toml  Dockerfile  README.md
lithiums/src/: error.rs  fuzz_api.rs  health.rs  identity.rs  labels.rs  lib.rs  main.rs  mk_rotator.rs  msg_reaper.rs  provider.rs  state.rs  store_keys.rs  tpm_provider.rs
lithiums/src/api/: handshake.rs  messages.rs  mod.rs  user.rs
lithiums/src/db/: mod.rs  models.rs  repo.rs
lithiums/src/middleware/: crypto.rs  guard.rs  mod.rs
lithiums/src/transport/: mod.rs
server/: docker-compose.yml  lithium.dockerfile  requirements.txt  torrc
server/app/api/: users.py  utils.py
