[package]
name = "lithium-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "dee5df5e57f9c5926c5ffb19f42476c1d9844999", features = ["fuzzing"] }
lithium_proto = { path = "../lithium_proto" }
lithiumd = { path = "../lithiumd", features = ["fuzzing"] }
lithiums = { path = "../lithiums", default-features = false, features = ["fuzzing"] }

[profile.release]
debug = 1

[[bin]]
name = "unpack_wire"
path = "fuzz_targets/unpack_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "invite_decode"
path = "fuzz_targets/invite_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "e2e_session_seq"
path = "fuzz_targets/e2e_session_seq.rs"
test = false
doc = false
bench = false

[[bin]]
name = "identity_decode"
path = "fuzz_targets/identity_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keyfile_parse"
path = "fuzz_targets/keyfile_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secret_json"
path = "fuzz_targets/secret_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opaque_parse"
path = "fuzz_targets/opaque_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kyberbox_decrypt"
path = "fuzz_targets/kyberbox_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aead_decrypt"
path = "fuzz_targets/aead_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sign_verify"
path = "fuzz_targets/sign_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pow_verify"
path = "fuzz_targets/pow_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_decode"
path = "fuzz_targets/transport_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_micro"
path = "fuzz_targets/transport_micro.rs"
test = false
doc = false
bench = false
