[package]
name = "lithium-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "1156ef37469c967e204ed8f5fd542e008bfc871b", features = ["fuzzing"] }
lithium_proto = { path = "../lithium_proto" }
lithiumd = { path = "../lithiumd", features = ["fuzzing"] }
lithiums = { path = "../lithiums", default-features = false, features = ["fuzzing"] }

[profile.release]
debug = 1

[[bin]]
name = "unpack_wire"
path = "fuzz_targets/unpack_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "invite_decode"
path = "fuzz_targets/invite_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "e2e_session_seq"
path = "fuzz_targets/e2e_session_seq.rs"
test = false
doc = false
bench = false

[[bin]]
name = "identity_decode"
path = "fuzz_targets/identity_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_decode"
path = "fuzz_targets/transport_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_micro"
path = "fuzz_targets/transport_micro.rs"
test = false
doc = false
bench = false
