[package]
name = "lithium_itest"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lithium_core = { path = "../lithium_core" }
lithiums = { path = "../lithiums" }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde_json = "1.0.149"
hex = "0.4.3"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.10.0"
zeroize = "1.8.2"
tempfile = "3.27.0"
libc = "0.2.183"
poem = { version = "3.1.12" }

[[test]]
name = "server"
path = "tests/server_tests.rs"