[package]
name = "lithium_itest"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "37dae745e0be14b352ac395e49c17bd2f21a1a95" }
lithium_proto = { path = "../lithium_proto" }
lithiums = { path = "../lithiums" }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde_json = "1.0.149"
hex = "0.4.3"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.10.0"
zeroize = "1.8.2"
tempfile = "3.27.0"
poem = { version = "3.1.12" }

[[test]]
name = "server"
path = "tests/server/server_tests.rs"

[[test]]
name = "auth_abuse"
path = "tests/server/auth_abuse.rs"

[[test]]
name = "mailbox_abuse"
path = "tests/server/mailbox_abuse.rs"

[[test]]
name = "replay_timestamp"
path = "tests/server/replay_timestamp.rs"

[[test]]
name = "concurrency"
path = "tests/server/concurrency.rs"

[[test]]
name = "daemon_basic"
path = "tests/daemon/basic.rs"

[[test]]
name = "daemon_server"
path = "tests/daemon/server.rs"

[[test]]
name = "daemon_adversarial"
path = "tests/daemon/adversarial.rs"

[[test]]
name = "daemon_state_order"
path = "tests/daemon/state_order.rs"

[[test]]
name = "daemon_payload"
path = "tests/daemon/payload.rs"

[[test]]
name = "daemon_concurrency"
path = "tests/daemon/concurrency.rs"

[[test]]
name = "daemon_persistence"
path = "tests/daemon/persistence.rs"

[[test]]
name = "daemon_contacts"
path = "tests/daemon/contacts.rs"

[[test]]
name = "ds_messaging"
path = "tests/daemon_server_tests/messaging.rs"

[[test]]
name = "ds_invite_abuse"
path = "tests/daemon_server_tests/invite_abuse.rs"

[[test]]
name = "ds_account_lifecycle"
path = "tests/daemon_server_tests/account_lifecycle.rs"

[[test]]
name = "ds_concurrent"
path = "tests/daemon_server_tests/concurrent.rs"