[package]
name = "lithium_proto"
version = "0.1.0"
edition = "2024"

[features]
fuzzing = []

[dependencies]
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "3e3ee7b4beb73433a55fb208b1f294647ed3188a" }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.22.0", features = ["v5", "serde"] }
tokio = { version = "1.50.0", features = ["sync"] }
hex = "0.4"
