[package]
name = "lithiumd"
version = "0.1.0"
edition = "2024"

[dependencies]
lithium_core = { path = "../lithium_core" }
rand = "0.10.0"
argon2 = "0.6.0-rc.7"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = "0.13.2"
hex = "0.4.3"
zeroize = "1.8.2"
dotenvy = "0.15.7"
aead = "0.6.0-rc.10"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
sea-orm = { version = "2.0.0-rc.32", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.43"
x25519-dalek = "3.0.0-pre.6"
