[package]
name = "lithiumd"
version = "0.1.0"
edition = "2024"

[dependencies]
lithium_core = { path = "../lithium_core" }
rand = "0.10.0"
argon2 = "0.5.3"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = "0.13.2"
hex = "0.4.3"
zeroize = "1.8.2"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.43"
libc = "0.2.182"
log = "0.4.29"
x25519-dalek = { version = "2.0.1", features = ["zeroize", "static_secrets"] }
subtle = "2.6.1"
