[package]
name = "lithiumd"
version = "0.1.0"
edition = "2024"

[features]
fuzzing = ["dep:arbitrary"]

[dependencies]
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "37dae745e0be14b352ac395e49c17bd2f21a1a95" }
lithium_proto = { path = "../lithium_proto" }
rand = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = "0.13.2"
hex = "0.4.3"
zeroize = "1.8.2"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.43"
libc = "0.2.182"
x25519-dalek = { version = "2.0.1", features = ["zeroize", "static_secrets"] }
subtle = "2.6.1"
tray-icon = { version = "0.21", default-features = false }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.27.0"
proptest = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
