[package]
name = "lithiumg"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", features = ["wgpu"] }
egui = "0.33.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
