[package]
name = "lithiums"
version = "0.1.0"
edition = "2024"

[features]
default = ["tpm"]
tpm = ["dep:tss-esapi"]
fuzzing = []

[dependencies]
lithium_core = { git = "https://github.com/GilbertzRivi/lithium-core.git", rev = "dee5df5e57f9c5926c5ffb19f42476c1d9844999" }
lithium_proto = { path = "../lithium_proto" }
poem = { version = "3.1.12", features = ["anyhow", "compression", "multipart"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
tss-esapi = { version = "7.6.0", optional = true }
serde_json = "1.0.149"
hex = "0.4.3"
uuid = { version = "1.22.0", features = ["v4", "v5", "serde"] }
zeroize = "1.8.2"
sea-orm = { version = "1.1.19", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.10.0"
chrono = "0.4.44"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3"
subtle = "2.6.1"